<resources>
    <string name="app_name">Logit</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_made_easy">Sign up made easy</string>
    <string name="or">OR</string>
    <string name="g">G</string>
    <string name="title_activity_testing">Testing</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="login_with_google">Login With Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="don_t_have_an_account">Don’t have an account? </string>
    <string name="remember_password">Remember Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password*</string>
    <string name="reg_no">Reg. No*</string>
    <string name="welcome_back">Welcome Back!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>